
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

package DurableTaskGrpc;

service OrchestrationService {
    // OrchestrationServiceClient
    rpc GetFeatures(google.protobuf.Empty) returns (GetFeaturesResponse);
    rpc CreateTaskOrchestration (CreateTaskOrchestrationRequest) returns (google.protobuf.Empty);
    rpc ForceTerminateTaskOrchestration (ForceTerminateTaskOrchestrationRequest) returns (google.protobuf.Empty);
    rpc RewindTaskOrchestration (RewindTaskOrchestrationRequest) returns (google.protobuf.Empty);
    rpc SendTaskOrchestrationMessageBatch (SendTaskOrchestrationMessageBatchRequest) returns (google.protobuf.Empty);
    rpc GetOrchestrationHistory (GetOrchestrationHistoryRequest) returns (GetOrchestrationHistoryResponse);
    rpc GetOrchestrationState (GetOrchestrationStateRequest) returns (GetOrchestrationStateResponse);
    rpc GetOrchestrationInstanceState (GetOrchestrationInstanceStateRequest) returns (GetOrchestrationInstanceStateResponse);
    rpc PurgeOrchestrationHistory (PurgeOrchestrationHistoryRequest) returns (google.protobuf.Empty);
    rpc WaitForOrchestration (WaitForOrchestrationRequest) returns (WaitForOrchestrationResponse);

    rpc GetOrchestrations (GetOrchestrationsRequest) returns (GetOrchestrationsResponse);
    rpc PurgeInstanceHistory (PurgeInstanceHistoryRequest) returns (PurgeInstanceHistoryResponse);

    // OrchestrationService
    rpc LockNextTaskOrchestrationWorkItem (stream TaskOrchestrationRequest) returns (stream TaskOrchestrationResponse);

    rpc LockNextTaskActivityWorkItem (LockNextTaskActivityWorkItemRequest) returns (LockNextTaskActivityWorkItemResponse);
    rpc RenewTaskActivityWorkItemLock (RenewTaskActivityWorkItemLockRequest) returns (RenewTaskActivityWorkItemLockResponse);
    rpc CompleteTaskActivityWorkItem (CompleteTaskActivityWorkItemRequest) returns (google.protobuf.Empty);
    rpc AbandonTaskActivityWorkItem (AbandonTaskActivityWorkItemRequest) returns (google.protobuf.Empty);
}

// Client messages
message GetFeaturesResponse {
    repeated int32 features = 1;
}

message CreateTaskOrchestrationRequest {
    string creation_message = 1;
    repeated int32 dedupe_statuses = 2;
}

message ForceTerminateTaskOrchestrationRequest {
    string instance_id = 1;
    google.protobuf.StringValue reason = 2;
}

message RewindTaskOrchestrationRequest {
    string instance_id = 1;
    google.protobuf.StringValue reason = 2;
}

message SendTaskOrchestrationMessageBatchRequest {
    repeated string messages = 1;
}

message GetOrchestrationHistoryRequest {
    string instance_id = 1;
    google.protobuf.StringValue execution_id = 2;
}

message GetOrchestrationHistoryResponse {
    google.protobuf.StringValue history = 1;
}

message GetOrchestrationStateRequest {
    string instance_id = 1;
    google.protobuf.StringValue execution_id = 2;
}

message GetOrchestrationStateResponse {
    google.protobuf.StringValue state = 1;
}

message GetOrchestrationInstanceStateRequest {
    string instance_id = 1;
    bool all_executions = 2;
}

message GetOrchestrationInstanceStateResponse {
    repeated string states = 1;
}

message WaitForOrchestrationRequest {
    string instance_id = 1;
    google.protobuf.StringValue execution_id = 2;
    google.protobuf.Duration timeout = 3;
}

message WaitForOrchestrationResponse {
    google.protobuf.StringValue state = 1;
}

message PurgeOrchestrationHistoryRequest {
    google.protobuf.Timestamp threshold_date_time_utc = 1;
    OrchestrationTimeFilterType time_range_filter_type = 2;
}

enum OrchestrationTimeFilterType {
    ORCHESTRATION_TIME_FILTER_TYPE_CREATED = 0;
    ORCHESTRATION_TIME_FILTER_TYPE_COMPLETED = 1;
    ORCHESTRATION_TIME_FILTER_TYPE_UPDATED = 2;
}

message GetOrchestrationsRequest {
    int32 top = 1;
    google.protobuf.StringValue continuation_token = 2;
    google.protobuf.StringValue instance_id = 3;
    google.protobuf.StringValue name = 4;
    google.protobuf.Timestamp created_time_from = 5;
    google.protobuf.Timestamp created_time_to = 6;
    repeated int32 runtime_status = 7;
    bool include_previous_executions = 8;
}

message GetOrchestrationsResponse {
    repeated string states = 1;
    google.protobuf.Int64Value count = 2;
    google.protobuf.StringValue continuation_token = 3;
}

message PurgeInstanceHistoryRequest {
    string instance_id = 1;
    google.protobuf.Timestamp created_time_from = 2;
    google.protobuf.Timestamp created_time_to = 3;
    repeated int32 runtime_status = 4;
}

message PurgeInstanceHistoryResponse {
    int32 instances_deleted = 1;
}

// Orchestration messages
message TaskOrchestrationRequest {
    oneof message {
        LockNextTaskOrchestrationWorkItemRequest lock_request = 1;
        RenewTaskOrchestrationWorkItemLockRequest renew_request = 2;
        CompleteTaskOrchestrationWorkItemRequest complete_request = 3;
        FetchNewOrchestrationMessagesRequest fetch_request = 4;
        ReleaseTaskOrchestrationWorkItemRequest release_request = 5;
        AbandonTaskOrchestrationWorkItemLockRequest abandon_request = 6;
    };
}

message TaskOrchestrationResponse {
    oneof message {
        LockNextTaskOrchestrationWorkItemResponse lock_response = 1;
        RenewTaskOrchestrationWorkItemLockResponse renew_response = 2;
        CompleteTaskOrchestrationWorkItemResponse complete_response = 3;
        FetchNewOrchestrationMessagesResponse fetch_response = 4;
        ReleaseTaskOrchestrationWorkItemResponse release_response = 5;
        AbandonTaskOrchestrationWorkItemLockResponse abandon_response = 6;
    };
}

message LockNextTaskOrchestrationWorkItemRequest {
    google.protobuf.Duration receive_timeout = 1;
    repeated NameVersion orchestrations = 2;
    bool all_orchestrations = 3;
}

message LockNextTaskOrchestrationWorkItemResponse {
    oneof optional_work_item {
        TaskOrchestrationWorkItem work_item = 1;
    }   
}

message TaskOrchestrationWorkItem {
    string instance_id = 1;
    repeated string events = 2;
    google.protobuf.Timestamp locked_until_utc = 3;
    repeated string new_messages = 4;
}

message RenewTaskOrchestrationWorkItemLockRequest {
}

message RenewTaskOrchestrationWorkItemLockResponse {
    google.protobuf.Timestamp locked_until_utc = 1;
}

message CompleteTaskOrchestrationWorkItemRequest {
    repeated string new_events = 1;
    google.protobuf.StringValue new_status = 2;
    repeated string new_orchestration_events = 3;
    google.protobuf.StringValue new_orchestration_status = 4;
    repeated string outbound_messages = 5;
    repeated string orchestrator_messages = 6;
    repeated string timer_messages = 7;
    google.protobuf.StringValue continued_as_new_message = 8;
    string orchestration_state = 9;
}

message CompleteTaskOrchestrationWorkItemResponse {
}

message FetchNewOrchestrationMessagesRequest {
}

message FetchNewOrchestrationMessagesResponse {
    oneof optional_new_messages {
        OrchestrationMessages new_messages = 1;
    };
}

message OrchestrationMessages {
    repeated string messages = 1;
}

message ReleaseTaskOrchestrationWorkItemRequest {
}

message ReleaseTaskOrchestrationWorkItemResponse {
}

message AbandonTaskOrchestrationWorkItemLockRequest {
}

message AbandonTaskOrchestrationWorkItemLockResponse {
}

// Activity messages
message LockNextTaskActivityWorkItemRequest {
    google.protobuf.Duration receive_timeout = 1;
    repeated NameVersion activities = 2;
    bool all_activities = 3;
}

message LockNextTaskActivityWorkItemResponse {
    oneof optional_work_item {
        TaskActivityWorkItem work_item = 1;
    }
}

message TaskActivityWorkItem {
    string id = 1;
    google.protobuf.Timestamp locked_until_utc = 2;
    string taskMessage = 3;
}

message RenewTaskActivityWorkItemLockRequest {
    TaskActivityWorkItem work_item = 1;
}

message RenewTaskActivityWorkItemLockResponse {
    TaskActivityWorkItem work_item = 1;
}

message CompleteTaskActivityWorkItemRequest {
    TaskActivityWorkItem work_item = 1;
    string responseMessage = 2;
}

message AbandonTaskActivityWorkItemRequest {
    TaskActivityWorkItem work_item = 1;
}

message NameVersion {
    string name = 1;
    string version = 2;
}
